--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Nexus Socal</title>
-      <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
-    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
+      <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
+      <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     </head>
 
     <body>
